# limine-protocol

./: Cargo.toml  README.md
example/: Cargo.toml
example/.cargo/: config.toml
example/src/: main.rs  writer.rs
example/src/misc/: x86_64-unknown-none.json
src/: default_const.rs  lib.rs
src/requests/: boot_time.rs  bootloader_info.rs  efi_sys_table.rs  entry_point.rs  framebuffer.rs  hhdm.rs  kernel_address.rs  kernel_file.rs  level_5_paging.rs  memory_map.rs  mod.rs  module.rs  rsdp.rs  smbios.rs  smp.rs  stack_size.rs  terminal.rs
src/responses/: boot_time.rs  bootloader_info.rs  efi_sys_table.rs  entry_point.rs  framebuffer.rs  hhdm.rs  kernel_address.rs  kernel_file.rs  level_5_paging.rs  memory_map.rs  mod.rs  module.rs  rsdp.rs  smbios.rs  smp.rs  stack_size.rs  terminal.rs
src/structures/: file.rs  framebuffer.rs  memory_map_entry.rs  mod.rs  smpinfo.rs  terminal.rs  uuid.rs
