[package]
authors = ["Jess B"]
description = "A crate designed to make dealing with the Limine Protocol easy, with no UB! (Probably...)"
edition = "2021"
keywords = ["limine", "limine-rs"]
license = "MIT"
name = "limine-protocol"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
